<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/main_header_selector">
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textColor="@color/primary_material_light"
        android:textSize="36sp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/promptText"
        android:id="@+id/promptText"
        android:textColor="@color/primary_material_light"
        android:textSize="17sp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="44sp"
        android:text="@string/about"
        android:textSize="17sp"
        android:id="@+id/about"
        android:layout_marginBottom="44dp"
        android:background="#40ffffff"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:onClick="openWebView"/>

    <ImageView
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:id="@+id/QRCodeIMG"
        android:contentDescription="@string/QRCodeIMG"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="44sp"
        android:text="@string/galleryButton"
        android:id="@+id/gallery_button"
        android:background="#40ffffff"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:onClick="openGallery"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/about"
        android:layout_alignStart="@+id/about"
        android:layout_alignEnd="@+id/about" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:id="@+id/transmittingProgressBar"
        android:indeterminate="false"
        android:max="100"
        android:layout_below="@+id/QRCodeIMG"
        android:layout_marginTop="22dp"
        android:layout_alignEnd="@+id/gallery_button"
        android:layout_alignStart="@+id/gallery_button"
        android:progress="0"
        android:visibility="invisible"
        android:focusableInTouchMode="false" />

</RelativeLayout>
